--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Happy Birthday Pakhi</title>
     <link rel="stylesheet" href="./Styles/style.css">
 </head>
 <body>
-    <h1 class="text-center text-white">Hi I am Hasnat Hasan</h1>
+    <h1 class="text-center text-white">Happy Birthday Pakhi</h1>
     <div id="target-element" class="tagredElement"></div>
     <canvas id="birthday">
     </canvas>
